--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=transporte-terrestre
 JWT_SECRET=your-secret-key
+KEEP_ALIVE_URL=http://your-app-url.com
 
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=your-cloud-name
