--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ DB_NAME=transporte-terrestre
 JWT_SECRET=your-secret-key
 KEEP_ALIVE_URL=http://your-app-url.com
 
+
+# Version de migración (ej: version_002), dejar vacío para carpeta raíz 'migrations'
+DB_VERSION=
+
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=your-cloud-name
 CLOUDINARY_API_KEY=your-api-key
