--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "db:seed": "ts-node -r tsconfig-paths/register src/db/seed.db.ts",
     "db:reset": "ts-node -r tsconfig-paths/register src/db/reset.db.ts",
     "db:migrate": "ts-node -r tsconfig-paths/register src/db/migrate.db.ts",
+    "db:command": "ts-node -r tsconfig-paths/register src/db/command.db.ts",
     "db:studio": "drizzle-kit studio",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
