--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@azure/storage-blob": "^12.29.1",
+    "@faker-js/faker": "^10.3.0",
     "@nestjs/common": "^11.0.17",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
